[gd_scene load_steps=2 format=3 uid="uid://biisedaow62y2"]

[ext_resource type="Script" uid="uid://bj7h3fmc1fjpj" path="res://game/autoload/ui/settings/setting_value_slider.gd" id="1_km1ox"]

[node name="SettingValueSlider" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_km1ox")

[node name="SettingTitle" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 2

[node name="ValueSlider" type="HSlider" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_left = NodePath("../ValueLabel")
focus_neighbor_right = NodePath("../ValueLabel")
max_value = 1.0
step = 0.01
value = 1.0

[node name="ValueLabel" type="Label" parent="."]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../ValueSlider")
focus_neighbor_right = NodePath("../ValueSlider")
text = "100%"
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="value_changed" from="ValueSlider" to="." method="_on_value_slider_value_changed"]
